--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "cypress": "^12.15.0"
+    "@testing-library/cypress": "^9.0.0",
+    "cypress": "^12.15.0",
+    "cypress-social-logins": "^1.14.1"
   }
 }
