--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@lexical/react": "^0.11.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -18,6 +19,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "lexical": "^0.11.1",
+    "mongodb": "^5.6.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
