--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.6",
     "lexical": "^0.11.1",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
