--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^9.0.0",
+    "@types/randomcolor": "^0.5.7",
     "cypress": "^12.15.0",
     "cypress-social-logins": "^1.14.1"
   }
