--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@testing-library/cypress": "^9.0.0",
     "@types/randomcolor": "^0.5.7",
     "cypress": "^12.15.0",
-    "cypress-social-logins": "^1.14.1",
-    "nodemailer": "^6.9.3"
+    "cypress-social-logins": "^1.14.1"
   }
 }
