--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "prisma": "prisma studio"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^1.0.0",
+    "@auth/prisma-adapter": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@lexical/react": "^0.11.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@prisma/client": "^4.16.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -23,8 +25,6 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "lexical": "^0.11.1",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -38,6 +38,7 @@
     "@testing-library/cypress": "^9.0.0",
     "@types/randomcolor": "^0.5.7",
     "cypress": "^12.16.0",
-    "cypress-social-logins": "^1.14.1"
+    "cypress-social-logins": "^1.14.1",
+    "prisma": "^4.16.1"
   }
 }
