--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "cloudinary": "^1.37.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "lexical": "^0.11.1",
