--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@lexical/react": "^0.11.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@prisma/client": "^4.16.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -25,7 +25,6 @@
     "cloudinary": "^1.37.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "lexical": "^0.11.1",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
