migrate from tinymce to tiptap + mantine
rich text editor dependencies

Replace tinymce with mantine + tiptap

remove global variable

remove tinymce api key

create variable that holds editor extensions

set color scheme to dark for mantine components

Update type of content field in PublicPost

content field now has type of Json

Update _app.tsx

fix tailwind overriding mantine styles

--- a/package.json
+++ b/package.json
@@ -14,10 +14,20 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mantine/core": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/tiptap": "^6.0.16",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@prisma/client": "^4.16.1",
-    "@tinymce/tinymce-react": "^4.3.0",
+    "@tabler/icons-react": "^2.24.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
+    "@tiptap/extension-text-align": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
