--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^1.37.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "moment": "^2.29.4",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
