--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
     "@mantine/tiptap": "^6.0.16",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
     "@prisma/client": "^5.0.0",
     "@tabler/icons-react": "^2.24.0",
     "@tiptap/extension-link": "^2.0.3",
