--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
