--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "anon",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open",
-    "prisma": "prisma studio"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^1.0.0",
-    "@mantine/core": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
-    "@mantine/notifications": "^6.0.16",
-    "@mantine/tiptap": "^6.0.16",
-    "@prisma/client": "^5.0.0",
-    "@tabler/icons-react": "^2.24.0",
-    "@tiptap/extension-link": "^2.0.3",
-    "@tiptap/extension-placeholder": "^2.0.3",
-    "@tiptap/extension-text-align": "^2.0.3",
-    "@tiptap/extension-underline": "^2.0.3",
-    "@tiptap/pm": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "cloudinary": "^1.37.3",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "moment": "^2.29.4",
-    "next": "13.4.6",
-    "next-auth": "^4.22.1",
-    "postcss": "8.4.24",
-    "randomcolor": "^0.6.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swr": "^2.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@testing-library/cypress": "^9.0.0",
-    "@types/randomcolor": "^0.5.7",
-    "cypress": "^12.17.3",
-    "cypress-social-logins": "^1.14.1",
-    "prisma": "^5.0.0"
-  }
+	"name": "anon",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"cypress": "cypress open",
+		"prisma": "prisma studio",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^1.0.0",
+		"@mantine/core": "^6.0.16",
+		"@mantine/hooks": "^6.0.16",
+		"@mantine/notifications": "^6.0.16",
+		"@mantine/tiptap": "^6.0.16",
+		"@prisma/client": "^5.0.0",
+		"@tabler/icons-react": "^2.24.0",
+		"@tiptap/extension-link": "^2.0.3",
+		"@tiptap/extension-placeholder": "^2.0.3",
+		"@tiptap/extension-text-align": "^2.0.3",
+		"@tiptap/extension-underline": "^2.0.3",
+		"@tiptap/pm": "^2.0.3",
+		"@tiptap/react": "^2.0.3",
+		"@tiptap/starter-kit": "^2.0.3",
+		"@types/node": "20.3.1",
+		"@types/react": "18.2.13",
+		"@types/react-dom": "18.2.6",
+		"autoprefixer": "10.4.14",
+		"cloudinary": "^1.37.3",
+		"eslint": "8.43.0",
+		"eslint-config-next": "13.4.6",
+		"moment": "^2.29.4",
+		"next": "13.4.6",
+		"next-auth": "^4.22.1",
+		"postcss": "8.4.24",
+		"randomcolor": "^0.6.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"swr": "^2.2.0",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"@testing-library/cypress": "^9.0.0",
+		"@types/randomcolor": "^0.5.7",
+		"cypress": "^12.17.3",
+		"cypress-social-logins": "^1.14.1",
+		"prisma": "^5.0.0"
+	}
 }
