--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"@mantine/tiptap": "^6.0.16",
 		"@prisma/client": "^5.2.0",
 		"@tabler/icons-react": "^2.24.0",
+		"@tiptap/extension-color": "^2.1.7",
 		"@tiptap/extension-link": "^2.0.3",
 		"@tiptap/extension-placeholder": "^2.0.3",
 		"@tiptap/extension-text-align": "^2.0.3",
+		"@tiptap/extension-text-style": "^2.1.7",
 		"@tiptap/extension-underline": "^2.0.3",
 		"@tiptap/pm": "^2.0.3",
 		"@tiptap/react": "^2.0.3",
