--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"next-auth": "^4.22.1",
 		"postcss": "8.4.24",
 		"posthog-js": "^1.78.2",
+		"posthog-node": "^3.1.2",
 		"randomcolor": "^0.6.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
