--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
-		"autoprefixer": "10.4.14",
+		"autoprefixer": "^10.4.16",
 		"cloudinary": "^1.37.3",
 		"eslint": "8.43.0",
 		"eslint-config-next": "13.4.6",
 		"moment": "^2.29.4",
 		"next": "13.4.6",
 		"next-auth": "^4.22.1",
-		"postcss": "8.4.24",
+		"postcss": "^8.4.31",
 		"posthog-js": "^1.78.2",
 		"posthog-node": "^3.1.2",
 		"randomcolor": "^0.6.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"swr": "^2.2.0",
-		"tailwindcss": "3.3.2",
+		"tailwindcss": "^3.3.3",
 		"typescript": "5.1.3"
 	},
 	"devDependencies": {
