--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
 		"@testing-library/cypress": "^10.0.0",
 		"@types/randomcolor": "^0.5.7",
 		"cypress-social-logins": "^1.14.1",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.2.3",
+		"prettier-plugin-tailwindcss": "^0.5.11",
 		"prisma": "^5.2.0"
 	}
 }
