--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"prettier": "^3.2.3",
 		"prettier-plugin-tailwindcss": "^0.5.11",
-		"prisma": "^5.2.0"
+		"prisma": "^5.2.0",
+		"sass": "^1.69.7"
 	}
 }
