--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
+		"@vercel/analytics": "^1.1.2",
 		"autoprefixer": "^10.4.16",
 		"cloudinary": "^1.37.3",
 		"cypress": "^13.6.0",
