--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"eslint": "8.43.0",
 		"eslint-config-next": "13.4.6",
 		"moment": "^2.29.4",
-		"next": "13.4.6",
+		"next": "^14.2.11",
 		"next-auth": "^4.22.1",
 		"postcss": "^8.4.31",
 		"randomcolor": "^0.6.2",
